# libtoml

./: .bazelrc  .clang-format  .gitignore  .gitlab-ci.yml  BUILD.bazel  COPYING  Makefile  NEWS  README.adoc  README.md  TODO.adoc  WORKSPACE  example.c  example.toml  lex.c  lex.h  lex_test.c  microtoml_test.c  mtoml.adoc  mtoml.c  mtoml.h  tables.toml  test1.c  test1.toml  test2.c  test2.toml  test_microtoml.c  toml.c  toml.h  toml_test.c
tests/: array_booleans.toml  array_inline_tables.toml  array_integers.toml  array_reals.toml  array_strings.toml  array_tables.toml  array_tables_2.toml  inline_tables.toml  integers.toml  keyvalues.toml
