load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "toml",
    srcs = ["toml.c"],
    hdrs = ["toml.h"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "testdata",
    srcs = glob(["tests/*"]),
)

cc_test(
    name = "microtoml_test",
    size = "small",
    srcs = ["microtoml_test.c"],
    data = ["testdata"],
    deps = ["//:toml"],
)
